# django-collab-permissions

./: .gitignore  Readme.md  setup.cfg
collab/: __init__.py  apps.py  context_processors.py  decorators.py  middleware.py  mixins.py  models.py  permissions.py  shortcuts.py  signals.py  tests.py  urls.py  util.py  views.py
collab/migrations/: 0001_initial.py  0002_auto_20151102_1520.py  0003_collab_last_activity.py
collab/templatetags/: collab_tags.py
