[metadata]
name = django_collab_permissions
author = Mattes Sarcander
description = Provides permissions needed for Django Collab, including mixins and decorators.
version = 0.1
url = https:///github.com/Fortschritt/django-collab-permissions
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4